--- a/Tab/www/templates/cttm.html
+++ b/Tab/www/templates/cttm.html
@@ -43,8 +43,8 @@
          </div>
         </div >
         <div ng-show="hload"  style="text-align: center; margin-bottom: 40px !important;" >
-        <ion-spinner icon="ripple" class="spinner-calm" style="  width: 19% !important;height: 85px !important;"></ion-spinner>
-            </div>
+            <ion-spinner icon="circles" class="spinner-calm"></ion-spinner>
+        </div>
      <ion-scroll direction="x" ng-show="hswitch" scrollbar-x="false"> 
          <table class="spin">
            <!--  <th class="chinese" align="left" style="background: #1f8dd6; color: #ffffff;">&nbsp&nbsp翻&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp译</th>-->
@@ -66,7 +66,7 @@
              </tr>
              <tr style="width:30px"></tr>
 
-             <tr >
+             <tr ng-show="hshow1">
                  <td class="chinese" align="center" colspan="2" style="background: #1f8dd6; color: #ffffff;">相&nbsp关&nbsp词&nbsp条</td>
              </tr>
              <tr ng-repeat="about in abouts" style="border:1px solid #000000;width:50px;border-top-style: none;border-bottom-style:none ">
@@ -82,5 +82,6 @@
              </tr>
          </table>
         </ion-scroll>
+
     </ion-content>
 </ion-view>
