--- a/Tab/www/templates/ctwm.html
+++ b/Tab/www/templates/ctwm.html
@@ -37,7 +37,9 @@
            overflow:hidden;' rows="10"></textarea>
             </div>
         </div>
-
+        <div ng-show="cload"  style="text-align: center; margin-bottom: 40px !important;" >
+            <ion-spinner icon="circles" class="spinner-calm"></ion-spinner>
+        </div>
         <div ng-show="hchange" class="card">
             <table>
                 <tr ng-show="cshow"><td align="center" style="background: #1f8dd6; color: #ffffff;">翻&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp译</td></tr>
@@ -53,7 +55,7 @@
                     </td>
                 </tr>
                 <tr style="height:30px"></tr>
-                <tr ><td align="center" style="background: #1f8dd6; color: #ffffff;">相&nbsp关&nbsp词&nbsp条</td></tr>
+                <tr ng-show="cshow1"><td align="center" style="background: #1f8dd6; color: #ffffff;">相&nbsp关&nbsp词&nbsp条</td></tr>
                 <tr ng-repeat="about in abouts" style="border:1px solid #000000;width:50px;">
                     <td  style="width:100px; height:20px; text-align:center; float:left;">
                         <span >{{$index+1}}</span>
