--- a/Tab/www/templates/tmtc.html
+++ b/Tab/www/templates/tmtc.html
@@ -35,8 +35,11 @@
                <!-- <div  class="inputVertical"  contenteditable="true" spellcheck="false">
 
                 </div>-->
-            <div class="m" id="inputVertical" ng-keydown="checkEnter(event)" style=" height:200px; overflow:auto" contenteditable="true" spellcheck="false">
+            <div class="mongo" id="inputVertical" ng-keydown="checkEnter(event)" style=" height:200px; overflow:auto" contenteditable="true" spellcheck="false">
             </div>
+        </div>
+        <div ng-show="mload"  style="text-align: center; margin-bottom: 40px !important;" >
+            <ion-spinner icon="circles" class="spinner-calm"></ion-spinner>
         </div>
         <ion-scroll direction="x" ng-show="mswitch" scrollbar-x="false"> 
             <table class="spin">
@@ -58,7 +61,7 @@
 
                 </tr>
                 <tr style="width:30px"></tr>
-                <tr >
+                <tr ng-show="mshow1">
                     <td class="chinese" align="center" colspan="2" style="background: #1f8dd6; color: #ffffff;">相&nbsp关&nbsp词&nbsp条</td>
                 </tr>
                 <tr ng-repeat="about in abouts" style="border:1px solid #000000;width:50px;border-top-style: none;border-bottom-style:none">
